k8s/overlays/digitalocean/patch-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-news
  namespace: kube-news
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: null
    service.beta.kubernetes.io/aws-load-balancer-scheme: null
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: null
    service.beta.kubernetes.io/do-loadbalancer-name: "kube-news-poc"
    service.beta.kubernetes.io/do-loadbalancer-protocol: "http"
